--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Nhà nghỉ dưỡng & Căn hộ cho thuê - Tai</title>
     <link rel="shortcut icon" href="/Group.svg" type="image/x-icon" />
   </head>
   <body>
